# cprotogen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
src/cprotogen/: generator.py
